@@ -655,6 +655,7 @@ __ZN7WebCore8Settings36setOfflineWebApplicationCacheEnabledEb
 __ZN7WebCore8Settings40setJavaScriptCanOpenWindowsAutomaticallyEb
 __ZN7WebCore8Settings40setTextDirectionSubmenuInclusionBehaviorENS_37TextDirectionSubmenuInclusionBehaviorE
 __ZN7WebCore8Settings41setNeedsKeyboardEventDisambiguationQuirksEb
+__ZN7WebCore8Settings33setDownloadableBinaryFontsEnabledEb
 __ZN7WebCore8blankURLEv
 __ZN7WebCore8parseURLERKNS_6StringE
 __ZN7WebCore9DOMWindow30dispatchAllPendingUnloadEventsEv
